force-app/main/default/objects/Screening__c/fields/Referral_Source_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Contact_Info__c</fullName>
    <label>Referral Source Contact Info</label>
    <type>TextArea</type>
</CustomField>