force-app/main/default/objects/Screening__c/fields/Rep_Payee__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rep Payee</label>
    <type>Checkbox</type>
</CustomField>