force-app/main/default/objects/Screening__c/fields/Rep_Payee_Description__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee_Description__c</fullName>
    <label>Rep Payee Description</label>
    <type>TextArea</type>
</CustomField>