force-app/main/default/objects/Screening__c/fields/Seizures_Description__c.field-meta.xml
<CustomField>
    <fullName>Seizures_Description__c</fullName>
    <label>Seizures Description</label>
    <type>TextArea</type>
</CustomField>