force-app/main/default/objects/Screening__c/fields/Self_Care__c.field-meta.xml
<CustomField>
    <fullName>Self_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Able to care for physical and dietary needs?</inlineHelpText>
    <label>Self Care</label>
    <type>Checkbox</type>
</CustomField>