force-app/main/default/objects/Screening__c/fields/Self_Care_Description__c.field-meta.xml
<CustomField>
    <fullName>Self_Care_Description__c</fullName>
    <label>Self Care Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>