force-app/main/default/objects/Screening__c/fields/Self_Harm__c.field-meta.xml
<CustomField>
    <fullName>Self_Harm__c</fullName>
    <description>Any current thoughts to hurt yourself or others? History of suicide/homicidal attempts?Hospitalizations?</description>
    <inlineHelpText>Any current thoughts to hurt yourself or others? History of suicide/homicidal attempts?Hospitalizations?</inlineHelpText>
    <label>Self Harm</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>