force-app/main/default/objects/Screening__c/fields/Self_Harm_Description__c.field-meta.xml
<CustomField>
    <fullName>Self_Harm_Description__c</fullName>
    <label>Self Harm Description</label>
    <type>TextArea</type>
</CustomField>