force-app/main/default/objects/Screening__c/fields/Sex_Offender__c.field-meta.xml
<CustomField>
    <fullName>Sex_Offender__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you a registered sex offender?</inlineHelpText>
    <label>Sex Offender</label>
    <type>Checkbox</type>
</CustomField>