force-app/main/default/objects/Screening__c/fields/Sex_Offender_Description__c.field-meta.xml
<CustomField>
    <fullName>Sex_Offender_Description__c</fullName>
    <label>Sex Offender Description</label>
    <type>TextArea</type>
</CustomField>