force-app/main/default/objects/Screening__c/fields/Shelter_Time_in_Past_Year__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Time_in_Past_Year__c</fullName>
    <description>In the last year, total time spent in emergency shelters, or a place not meant for human habitation</description>
    <label>Shelter Time in Past Year?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>