force-app/main/default/objects/Screening__c/fields/Significant_Health_Issues_Description__c.field-meta.xml
<CustomField>
    <fullName>Significant_Health_Issues_Description__c</fullName>
    <label>Significant Health Issues Description</label>
    <type>TextArea</type>
</CustomField>