force-app/main/default/objects/Screening__c/fields/Social_Support__c.field-meta.xml
<CustomField>
    <fullName>Social_Support__c</fullName>
    <description>Who do you have in your support network (family, friends, neighbors)?
Are there any challenges in maintaining relationships or accessing social activities?</description>
    <inlineHelpText>Who do you have in your support network (family, friends, neighbors)?
Are there any challenges in maintaining relationships or accessing social activities?</inlineHelpText>
    <label>Social Support</label>
    <type>TextArea</type>
</CustomField>