force-app/main/default/objects/Screening__c/fields/Social_Supports__c.field-meta.xml
<CustomField>
    <fullName>Social_Supports__c</fullName>
    <inlineHelpText>(personal and professional) family involvement? Guardian? Emergency contact?</inlineHelpText>
    <label>Social Supports</label>
    <type>TextArea</type>
</CustomField>