force-app/main/default/objects/Screening__c/fields/Substance_Use_Description__c.field-meta.xml
<CustomField>
    <fullName>Substance_Use_Description__c</fullName>
    <label>Substance Use Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>