force-app/main/default/objects/Screening__c/fields/Substances_Used__c.field-meta.xml
<CustomField>
    <fullName>Substances_Used__c</fullName>
    <label>Substances Used</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>