force-app/main/default/objects/Screening__c/fields/TB_Diagnosis_Active_Latent__c.field-meta.xml
<CustomField>
    <fullName>TB_Diagnosis_Active_Latent__c</fullName>
    <label>TB Diagnosis Active/Latent?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>