force-app/main/default/objects/Screening__c/fields/Therapist__c.field-meta.xml
<CustomField>
    <fullName>Therapist__c</fullName>
    <label>Therapist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>