force-app/main/default/objects/Screening__c/fields/Thoughts_of_Suicide_Description__c.field-meta.xml
<CustomField>
    <fullName>Thoughts_of_Suicide_Description__c</fullName>
    <label>Thoughts of Suicide Description</label>
    <type>TextArea</type>
</CustomField>