force-app/main/default/objects/Screening__c/fields/Tobacco_Use__c.field-meta.xml
<CustomField>
    <fullName>Tobacco_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tobacco Use?</label>
    <type>Checkbox</type>
</CustomField>