force-app/main/default/objects/Screening__c/fields/TP_goals_measurable__c.field-meta.xml
<CustomField>
    <fullName>TP_goals_measurable__c</fullName>
    <label>TP goals measurable?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>