force-app/main/default/objects/Screening__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <description>How do you typically get around? Do you have reliable transportation?</description>
    <inlineHelpText>How do you typically get around? Do you have reliable transportation?</inlineHelpText>
    <label>Transportation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>