force-app/main/default/objects/Screening__c/fields/Treatment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan__c</fullName>
    <label>Treatment Plan</label>
    <type>Date</type>
</CustomField>