force-app/main/default/objects/Screening__c/fields/Triggers__c.field-meta.xml
<CustomField>
    <fullName>Triggers__c</fullName>
    <description>What are your triggers for symptoms? Anything cause an increase in symptoms?</description>
    <inlineHelpText>What are your triggers for symptoms? Anything cause an increase in symptoms?</inlineHelpText>
    <label>Triggers</label>
    <type>TextArea</type>
</CustomField>