force-app/main/default/objects/Screening__c/fields/UCare_Insurance__c.field-meta.xml
<CustomField>
    <fullName>UCare_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UCare Insurance?</label>
    <type>Checkbox</type>
</CustomField>