force-app/main/default/objects/Screening__c/fields/Use_of_Assistive_Devices_for_Mobility__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Assistive_Devices_for_Mobility__c</fullName>
    <label>Use of Assistive Devices for Mobility?</label>
    <type>TextArea</type>
</CustomField>