force-app/main/default/objects/Screening__c/fields/Waiver__c.field-meta.xml
<CustomField>
    <fullName>Waiver__c</fullName>
    <label>Waiver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CADI</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>