force-app/main/default/objects/Screening__c/fields/Where_you_live__c.field-meta.xml
<CustomField>
    <fullName>Where_you_live__c</fullName>
    <description>Are you satisfied with your current living situation?
Are there any environmental concerns or safety issues in your home?</description>
    <inlineHelpText>Are you satisfied with your current living situation?
Are there any environmental concerns or safety issues in your home?</inlineHelpText>
    <label>Where you live</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>