force-app/main/default/objects/Screening__c/fields/Where_you_work__c.field-meta.xml
<CustomField>
    <fullName>Where_you_work__c</fullName>
    <description>What do you like about your work or what would you like to change?</description>
    <inlineHelpText>Are you currently employed? If yes, What do you like about your work or what would you like to change? If no, are you interested in employment resources?</inlineHelpText>
    <label>Where you work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>