force-app/main/default/objects/Screening__c/fields/Wounds_Description__c.field-meta.xml
<CustomField>
    <fullName>Wounds_Description__c</fullName>
    <label>Wounds Description</label>
    <type>TextArea</type>
</CustomField>