force-app/main/default/objects/Screening__c/fields/X72_Hour_Nurse_Follow_Up_Description__c.field-meta.xml
<CustomField>
    <fullName>X72_Hour_Nurse_Follow_Up_Description__c</fullName>
    <label>72 Hour Nurse Follow Up Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>