force-app/main/default/objects/Screening__c/recordTypes/ARC_Outreach.recordType-meta.xml
<RecordType>
    <fullName>ARC_Outreach</fullName>
    <active>true</active>
    <label>ARC Outreach</label>
</RecordType>