force-app/main/default/objects/Screening__c/recordTypes/ARMHS_MA_TCL.recordType-meta.xml
<RecordType>
    <fullName>ARMHS_MA_TCL</fullName>
    <active>true</active>
    <label>ARMHS MA TCL</label>
</RecordType>