force-app/main/default/objects/Screening__c/recordTypes/ARMHS_Standard.recordType-meta.xml
<RecordType>
    <fullName>ARMHS_Standard</fullName>
    <active>true</active>
    <label>ARMHS Standard</label>
</RecordType>