force-app/main/default/objects/Screening__c/recordTypes/ARMHS_TCL.recordType-meta.xml
<RecordType>
    <fullName>ARMHS_TCL</fullName>
    <active>true</active>
    <label>ARMHS TCL</label>
</RecordType>