force-app/main/default/objects/Screening__c/recordTypes/Crisis.recordType-meta.xml
<RecordType>
    <fullName>Crisis</fullName>
    <active>true</active>
    <label>Crisis</label>
</RecordType>