force-app/main/default/objects/Screening__c/recordTypes/IRTS.recordType-meta.xml
<RecordType>
    <fullName>IRTS</fullName>
    <active>true</active>
    <label>IRTS</label>
</RecordType>