force-app/main/default/objects/Screening__c/recordTypes/Long_Term.recordType-meta.xml
<RecordType>
    <fullName>Long_Term</fullName>
    <active>true</active>
    <label>Long Term</label>
</RecordType>