force-app/main/default/objects/Screening__c/validationRules/Commitment_Probation.validationRule-meta.xml
<ValidationRule>
    <fullName>Commitment_Probation</fullName>
    <active>true</active>
    <description>Requires description for commitment/probation</description>
    <errorConditionFormula>AND(Commitment_Probation__c = True,
ISBLANK(Commitment_Probation_Description__c))</errorConditionFormula>
    <errorDisplayField>Commitment_Probation_Description__c</errorDisplayField>
    <errorMessage>Commitment/Probation Description required.</errorMessage>
</ValidationRule>