force-app/main/default/objects/Screening__c/validationRules/Employment_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Employment_Other</fullName>
    <active>true</active>
    <description>Requires reason if other is chosen from Employment picklist</description>
    <errorConditionFormula>AND(ISPICKVAL(Employment_Status__c, &apos;Other&apos;),
ISBLANK(Employment_Other__c))</errorConditionFormula>
    <errorDisplayField>Employment_Other__c</errorDisplayField>
    <errorMessage>Employment Other Description required.</errorMessage>
</ValidationRule>