force-app/main/default/objects/Screening__c/validationRules/Finance_Concerns.validationRule-meta.xml
<ValidationRule>
    <fullName>Finance_Concerns</fullName>
    <active>true</active>
    <description>Requires description for finance concerns</description>
    <errorConditionFormula>AND(Finance_Concerns__c = True,
ISBLANK(Finance_Concerns_Description__c))</errorConditionFormula>
    <errorDisplayField>Finance_Concerns_Description__c</errorDisplayField>
    <errorMessage>Finance Concerns Description required</errorMessage>
</ValidationRule>