force-app/main/default/objects/Screening__c/validationRules/Harming_Others.validationRule-meta.xml
<ValidationRule>
    <fullName>Harming_Others</fullName>
    <active>true</active>
    <description>Requires description if Thoughts of harming others and history of harming others is chosen from MH Picklist.</description>
    <errorConditionFormula>AND(INCLUDES(MH_Crisis__c, &apos;Thoughts of harming others and history of harming others&apos;),
ISBLANK(Harming_Others_Description__c))</errorConditionFormula>
    <errorDisplayField>Harming_Others_Description__c</errorDisplayField>
    <errorMessage>Harming Others Description required.</errorMessage>
</ValidationRule>