force-app/main/default/objects/Screening__c/validationRules/Infections.validationRule-meta.xml
<ValidationRule>
    <fullName>Infections</fullName>
    <active>true</active>
    <description>Requires description if Infections is chosen from Current Health Concerns Picklist.</description>
    <errorConditionFormula>AND(INCLUDES(Current_Health_Concerns__c, &apos;Infections&apos;),
ISBLANK(Infections_Description__c))</errorConditionFormula>
    <errorDisplayField>Infections_Description__c</errorDisplayField>
    <errorMessage>Infections Description required.</errorMessage>
</ValidationRule>