force-app/main/default/objects/Screening__c/validationRules/Insulin_Dependence.validationRule-meta.xml
<ValidationRule>
    <fullName>Insulin_Dependence</fullName>
    <active>true</active>
    <description>Requires description if Insulin Dependence is chosen from Current Health Concerns Picklist.</description>
    <errorConditionFormula>AND(INCLUDES(Current_Health_Concerns__c, &apos;Insulin Dependence&apos;),
ISBLANK(Insulin_Dependence_Description__c))</errorConditionFormula>
    <errorDisplayField>Insulin_Dependence_Description__c</errorDisplayField>
    <errorMessage>Insulin Dependence Description required.</errorMessage>
</ValidationRule>