force-app/main/default/objects/Screening__c/validationRules/Insurance.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance</fullName>
    <active>true</active>
    <description>Requires description for insurance</description>
    <errorConditionFormula>AND(Insurance__c = True,
ISBLANK(Insurance_Description__c))</errorConditionFormula>
    <errorDisplayField>Insurance_Description__c</errorDisplayField>
    <errorMessage>Insurance Description required</errorMessage>
</ValidationRule>