force-app/main/default/objects/Screening__c/validationRules/Legal_Concerns.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Concerns</fullName>
    <active>true</active>
    <description>Requires description if legal concerns is checked</description>
    <errorConditionFormula>AND(Legal_Concerns__c = True,
ISBLANK(Legal_Concerns_Description__c))</errorConditionFormula>
    <errorDisplayField>Legal_Concerns_Description__c</errorDisplayField>
    <errorMessage>Legal Concern Description required</errorMessage>
</ValidationRule>