force-app/main/default/objects/Screening__c/validationRules/Mental_Health_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Mental_Health_Description</fullName>
    <active>true</active>
    <description>Requires description if Mental Health is chosen from MH Picklist.</description>
    <errorConditionFormula>AND(INCLUDES(MH_Crisis__c, &apos;Mental Health&apos;), ISBLANK(Mental_Health_Description__c))</errorConditionFormula>
    <errorDisplayField>Mental_Health_Description__c</errorDisplayField>
    <errorMessage>Mental Health Description required</errorMessage>
</ValidationRule>