force-app/main/default/objects/Screening__c/validationRules/Mobility_Issues.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobility_Issues</fullName>
    <active>true</active>
    <description>Requires description if Mobility Issues is chosen from Current Health Concerns Picklist.</description>
    <errorConditionFormula>AND(INCLUDES(Current_Health_Concerns__c, &apos;Mobility Issues&apos;),
ISBLANK(Mobility_Issues_Description__c))</errorConditionFormula>
    <errorDisplayField>Mobility_Issues_Description__c</errorDisplayField>
    <errorMessage>Mobility Issues Description required.</errorMessage>
</ValidationRule>