force-app/main/default/objects/Screening__c/validationRules/Nebulizer_CPAP.validationRule-meta.xml
<ValidationRule>
    <fullName>Nebulizer_CPAP</fullName>
    <active>true</active>
    <description>Requires description for nebulizer/cpap</description>
    <errorConditionFormula>AND(Nebulizer_CPAP__c = True,
ISBLANK(Nebulizer_CPAP_Description__c))</errorConditionFormula>
    <errorDisplayField>Nebulizer_CPAP_Description__c</errorDisplayField>
    <errorMessage>Nebulizer/CPAP Description required.</errorMessage>
</ValidationRule>