force-app/main/default/objects/Screening__c/validationRules/Physical_Health_Concerns.validationRule-meta.xml
<ValidationRule>
    <fullName>Physical_Health_Concerns</fullName>
    <active>true</active>
    <description>Requires description for physical health concerns</description>
    <errorConditionFormula>AND(Physical_Health_Concerns__c = True,
ISBLANK(Physical_Health_Concerns_Description__c))</errorConditionFormula>
    <errorDisplayField>Physical_Health_Concerns_Description__c</errorDisplayField>
    <errorMessage>Physical Health Concerns Description required.</errorMessage>
</ValidationRule>