force-app/main/default/objects/Screening__c/validationRules/Physical_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Physical_Restriction</fullName>
    <active>true</active>
    <description>Requires description for physical resitrictions</description>
    <errorConditionFormula>AND(Physical_Restrictions__c = True,
ISBLANK(Physical_Restrictions_Description__c))</errorConditionFormula>
    <errorDisplayField>Physical_Restrictions_Description__c</errorDisplayField>
    <errorMessage>Physical Restrictions Description required</errorMessage>
</ValidationRule>