force-app/main/default/objects/Screening__c/validationRules/Rep_Payee.validationRule-meta.xml
<ValidationRule>
    <fullName>Rep_Payee</fullName>
    <active>true</active>
    <description>Require Description if rep payee is checked</description>
    <errorConditionFormula>AND(Rep_Payee__c = True,
ISBLANK(Rep_Payee_Description__c))</errorConditionFormula>
    <errorDisplayField>Rep_Payee_Description__c</errorDisplayField>
    <errorMessage>Rep Payee Description required.</errorMessage>
</ValidationRule>