force-app/main/default/objects/Screening__c/validationRules/Seizures.validationRule-meta.xml
<ValidationRule>
    <fullName>Seizures</fullName>
    <active>true</active>
    <description>Requires description if Seizures is chosen from Current Health Concerns Picklist.</description>
    <errorConditionFormula>AND(INCLUDES(Current_Health_Concerns__c, &apos;Seizures&apos;),
ISBLANK(Seizures_Description__c))</errorConditionFormula>
    <errorDisplayField>Seizures_Description__c</errorDisplayField>
    <errorMessage>Seizures Description required.</errorMessage>
</ValidationRule>