force-app/main/default/objects/Screening__c/validationRules/Self_Care.validationRule-meta.xml
<ValidationRule>
    <fullName>Self_Care</fullName>
    <active>true</active>
    <description>Requires description for self care</description>
    <errorConditionFormula>AND(Self_Care__c = True,
ISBLANK(Self_Care_Description__c))</errorConditionFormula>
    <errorDisplayField>Self_Care_Description__c</errorDisplayField>
    <errorMessage>Self Care Description required</errorMessage>
</ValidationRule>