force-app/main/default/objects/Screening__c/validationRules/Self_Harm.validationRule-meta.xml
<ValidationRule>
    <fullName>Self_Harm</fullName>
    <active>true</active>
    <description>Requires description if Self-Harm is chosen from MH Picklist.</description>
    <errorConditionFormula>AND(INCLUDES(MH_Crisis__c, &apos;Self-harm&apos;),
ISBLANK(Self_Harm__c))</errorConditionFormula>
    <errorDisplayField>Self_Harm_Description__c</errorDisplayField>
    <errorMessage>Self-Harm Description required.</errorMessage>
</ValidationRule>