force-app/main/default/objects/Screening__c/validationRules/Sex_Offender.validationRule-meta.xml
<ValidationRule>
    <fullName>Sex_Offender</fullName>
    <active>true</active>
    <description>Requires description for sex offender</description>
    <errorConditionFormula>AND(Sex_Offender__c = True,
ISBLANK(Sex_Offender_Description__c))</errorConditionFormula>
    <errorDisplayField>Sex_Offender_Description__c</errorDisplayField>
    <errorMessage>Sex Offender Description required.</errorMessage>
</ValidationRule>