force-app/main/default/objects/Screening__c/validationRules/Significant_Health_Issues.validationRule-meta.xml
<ValidationRule>
    <fullName>Significant_Health_Issues</fullName>
    <active>true</active>
    <description>Requires description if Significant Health Issues is chosen from Current Health Concerns Picklist.</description>
    <errorConditionFormula>AND(INCLUDES(Current_Health_Concerns__c, &apos;Significant Health Issues&apos;),
ISBLANK(Significant_Health_Issues_Description__c))</errorConditionFormula>
    <errorDisplayField>Significant_Health_Issues_Description__c</errorDisplayField>
    <errorMessage>Significant Health Issues Description required.</errorMessage>
</ValidationRule>