force-app/main/default/objects/Screening__c/validationRules/Substance_Use.validationRule-meta.xml
<ValidationRule>
    <fullName>Substance_Use</fullName>
    <active>true</active>
    <description>Requires description if Substance Use is chosen from MH Picklist.</description>
    <errorConditionFormula>AND(INCLUDES(MH_Crisis__c, &apos;Substance Use&apos;),
ISBLANK(Substance_Use_Description__c))</errorConditionFormula>
    <errorDisplayField>Substance_Use_Description__c</errorDisplayField>
    <errorMessage>Substance Use Description required.</errorMessage>
</ValidationRule>