force-app/main/default/objects/Screening__c/validationRules/Wounds.validationRule-meta.xml
<ValidationRule>
    <fullName>Wounds</fullName>
    <active>true</active>
    <description>Requires description if Wounds is chosen from Current Health Concerns Picklist.</description>
    <errorConditionFormula>AND(INCLUDES(Current_Health_Concerns__c, &apos;Wounds&apos;),
ISBLANK(Wounds_Description__c))</errorConditionFormula>
    <errorDisplayField>Wounds_Description__c</errorDisplayField>
    <errorMessage>Wounds Description required.</errorMessage>
</ValidationRule>